# crazy

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.en.md  README.md  build_crazy_framework.bat  build_crazy_framework.sh  compile_commands.json  export.sh  utility.cmake
cmake/: utils.cmake
doc/: coroutine+scheduler.md  remark.md
examples/: http_server.cc  tcp_server.cc
src/: crazy.h
src/crazy/: actor_interface.cpp  actor_interface.h  address.cc  address.h  allocator.h  application.cpp  application.h  ascii_logo.h  assert.h  atomic_lock.cpp  atomic_lock.h  buffer.cpp  buffer.h  byte_array.h  command_line.h  common.h  cond_mutex.cpp  cond_mutex.h  config.cc  config.cpp  config.h  coroutine.cc  coroutine.h  date_time.cpp  date_time.h  endian.h  fd_context.cc  fd_context.h  file_lock.cpp  file_lock.h  format.h  hook.cc  hook.h  json.h  key_value_pair.h  lexicl_cast.h  logger.cc  logger.cpp  logger.h  message.cc  (+42 more)
src/crazy/db/: db.h  mysql.cc  mysql.h  redis.cc  redis.h
src/crazy/email/: email.h  smtp.h
src/crazy/encryption/: base64.cpp  base64.h  md5.cpp  md5.h
src/crazy/http/: aspect.h  http11.h  http11_parser.rl  http11_parser.rl.cc  http_connection.cc  http_connection.h  http_server.cc  http_server.h  http_session.cc  http_session.h  httpclient_parser.rl  httpclient_parser.rl.cc  request.cc  request.h  response.cc  response.h  servlet.cc  servlet.h  ws_server.cc  ws_server.h  ws_servlet.cc  ws_servlet.h  ws_session.cc  ws_session.h
src/crazy/mmap/: mmap.cpp  mmap.h  mmap_vector.h
src/crazy/mysql/: mysql_connection.h  mysql_connection_pool.h  mysql_native_connection.h
src/crazy/net/: acceptor.cpp  acceptor.h  client_actor.cpp  client_actor.h  connection.cpp  connection.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  local_socket.cpp  local_socket.h  selector.cpp  selector.h  service_actor.cpp  service_actor.h  session.cpp  session.h  socket.cpp  socket.h  socket_interface.cpp  socket_interface.h  wepoll.cpp  wepoll.h
src/crazy/orm/: orm.h
src/crazy/rapidxml/: rapidxml_print.h
src/crazy/rpc/: rpc.h  rpc_server.cc  rpc_server.h  rpc_servlet.h
src/crazy/streams/: socket_stream.cc  socket_stream.h
src/crazy/util/: crypto_util.cc  crypto_util.h  hash_util.cc  hash_util.h
tests/: app.ini  test.ini  test.toml  test.xml  test_actor.cc  test_actor_client.cc  test_ascii_logo.cc  test_assert.cc  test_byte_array.cc  test_config.cc  test_coroutine.cc  test_date_time.cc  test_encryption.cc  test_format.cc  test_hook.cc  test_http_connection.cc  test_http_server.cc  test_json.cc  test_key_value_pair.cc  test_lexical_cast.cc  test_localsocket.cc  test_lock.cc  test_logger.cc  test_mmap.cc  test_mutex.cc  test_mvvc_lock_wapper.cc  test_mysql.cc  test_processer.cc  test_protocol.cc  test_rapidxml.cc  test_request_response.cc  test_scheduler.cc  test_socket.cc  test_tcp_server.cc  test_thread.cc  test_timer.cc  test_toml11.cc  test_uri.cc  test_ws_server.cc
